force-app/main/default/objects/Program_Script__c.object
<CustomObject>
    <fields>
        <fullName>Decision_Able_To_Speak_To_Customer__c</fullName>
        <label>Decision: Able To Speak To Customer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Aware_of_Campaign__c</fullName>
        <label>Decision: Aware of Campaign</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Customer_Answered__c</fullName>
        <label>Decision: Customer Answered</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Send_Email__c</fullName>
        <label>Decision: Send Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instruction_Awareness__c</fullName>
        <label>Instruction: Awareness</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Call_Customer__c</fullName>
        <label>Instruction: Call Customer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Close_Did_Answer__c</fullName>
        <label>Instruction: Close Did Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Close_Out_Did_Not_Answer__c</fullName>
        <label>Instruction: Close Out Did Not Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Finish__c</fullName>
        <label>Instruction Finish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_No_More_Calls__c</fullName>
        <label>Instruction: No More Calls</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Until_Read_To_Call__c</fullName>
        <label>Instruction: Until Read To Call</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Langauge__c</fullName>
        <label>Langauge</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Langauge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Scripts</relationshipLabel>
        <relationshipName>Program_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talk_Track_Customer_Answered__c</fullName>
        <label>Talk Track: Customer Answered</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Customer_Did_Not_Answer__c</fullName>
        <label>Talk Track: Customer Did Not Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Customer_Is_Aware__c</fullName>
        <label>Talk Track: Customer Is Aware</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Customer_Is_Not_Aware__c</fullName>
        <label>Talk Track: Customer Is Not Aware</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Email_Accepted__c</fullName>
        <label>Talk Track: Email Accepted</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Email_Declined__c</fullName>
        <label>Talk Track: Email Declined</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Hello_And_Conversation_Ends__c</fullName>
        <label>Talk Track: Hello And Conversation Ends</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Talk_Track_Hello__c</fullName>
        <label>Talk Track: Hello</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Program Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Langauge__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Review</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Langauge__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Review</value>
        </filters>
        <label>For Review</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>