force-app/main/default/objects/Program_Script__c/fields/Decision_Available_To_Speak__c.field-meta.xml
<CustomField>
    <fullName>Decision_Available_To_Speak__c</fullName>
    <description>Decision label for being able to speak with person making outreach to.</description>
    <inlineHelpText>Decision label for being able to speak with person making outreach to.</inlineHelpText>
    <label>Decision: Available To Speak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>