force-app/main/default/objects/Program_Script__c/fields/Decision_Aware_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Decision_Aware_of_Program__c</fullName>
    <description>Decision label for whether the outreach is aware of program.</description>
    <inlineHelpText>Decision label for whether the outreach is aware of program.</inlineHelpText>
    <label>Decision: Aware of Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>