force-app/main/default/objects/Program_Script__c/fields/Decision_Outreach_Answered__c.field-meta.xml
<CustomField>
    <fullName>Decision_Outreach_Answered__c</fullName>
    <description>Decision label for whether customer answered or not.</description>
    <inlineHelpText>Decision label for whether customer answered or not.</inlineHelpText>
    <label>Decision: Outreach Answered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>