force-app/main/default/objects/Program_Script__c/fields/Instruction_Aware__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Aware__c</fullName>
    <description>Instruction for agent if outreach is aware of program.</description>
    <inlineHelpText>Instruction for agent if outreach is aware of program.</inlineHelpText>
    <label>Instruction: Aware</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>