force-app/main/default/objects/Program_Script__c/fields/Instruction_Close_Available__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Close_Available__c</fullName>
    <description>Instruction for agent when closing outreach that was available.</description>
    <inlineHelpText>Instruction for agent when closing outreach that was available.</inlineHelpText>
    <label>Instruction: Close Available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>