force-app/main/default/objects/Program_Script__c/fields/Instruction_Close_Not_Available__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Close_Not_Available__c</fullName>
    <description>Instruction to agent when outreach is not available or did not answer</description>
    <inlineHelpText>Instruction to agent when outreach is not available or did not answer</inlineHelpText>
    <label>Instruction: Close Not Available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>