force-app/main/default/objects/Program_Script__c/fields/Instruction_Make_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Make_Outreach__c</fullName>
    <description>Instruction to agent on how to make outreach.</description>
    <inlineHelpText>Instruction to agent on how to make outreach.</inlineHelpText>
    <label>Instruction: Make Outreach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>