force-app/main/default/objects/Program_Script__c/fields/Instruction_No_More_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Instruction_No_More_Outreach__c</fullName>
    <description>Instruction to agent when no more outreaches are found.</description>
    <inlineHelpText>Instruction to agent when no more outreaches are found.</inlineHelpText>
    <label>Instruction: No More Outreach</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>