force-app/main/default/objects/Program_Script__c/fields/Instruction_Until_Ready_To_Call__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Until_Ready_To_Call__c</fullName>
    <description>Instruction to agent informing not to click next until ready to make a call.</description>
    <inlineHelpText>Instruction to agent informing not to click next until ready to make a call.</inlineHelpText>
    <label>Instruction: Until Ready To Call</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>