force-app/main/default/objects/Program_Script__c/fields/Talk_Track_Outreach_Answered__c.field-meta.xml
<CustomField>
    <fullName>Talk_Track_Outreach_Answered__c</fullName>
    <description>What the agent should say if outreach was answered.</description>
    <inlineHelpText>What the agent should say if outreach was answered.</inlineHelpText>
    <label>Talk Track: Outreach Answered</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>