force-app/main/default/objects/Program_Script__c/fields/Talk_Track_Outreach_Not_Available__c.field-meta.xml
<CustomField>
    <fullName>Talk_Track_Outreach_Not_Available__c</fullName>
    <description>Talk track for agent when the outreach could not be made.</description>
    <inlineHelpText>Talk track for agent when the outreach could not be made.</inlineHelpText>
    <label>Talk Track: Outreach Not Available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>