force-app/main/default/objects/Program_Script__c/fields/Talk_Track_Outreach_Not_Aware__c.field-meta.xml
<CustomField>
    <fullName>Talk_Track_Outreach_Not_Aware__c</fullName>
    <description>Talk track for agent when outreach is not aware of the program.</description>
    <inlineHelpText>Talk track for agent when outreach is not aware of the program.</inlineHelpText>
    <label>Talk Track: Outreach Not Aware</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>