force-app/main/default/objects/Program_Script__c/listViews/For_Review.listView-meta.xml
<ListView>
    <fullName>For_Review</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Language__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Review</value>
    </filters>
    <label>For Review</label>
</ListView>